# MS-SQL-jango-labs

./: .gitignore  Cargo.toml  Dockerfile  build.sh  db.sh  docker-compose.build.yaml  docker-compose.yaml  run.sh  run_lab1.sh  run_lab2.sh
init-db/: analyze.sh  analyze.sql  init.sql  init_db.sh  profiler_result.sql  profiler_table_create.sh  profiler_table_update.sh  profiler_table_update.sql  query_profile.sh  query_profile.sql  start_profiler.sh
lab2/: README.md  run.sh
lab3/: README.md  run.profiler.sh  run.sh
lab4/: Dockerfile  README.md  history.sh  install_ODBC.sh  requirements.txt  run.sh
lab4/django_back/: asgi.py  settings.py  urls.py  wsgi.py
lab4/game/: admin.py  api_auth.py  api_permissions.py  api_urls.py  api_views.py  apps.py  auth.py  context_processors.py  filters.py  forms.py  middleware.py  models.py  serializers.py  urls.py  views.py
lab4/game/management/commands/: create_game_user.py
lab4/templates/: base.html
lab4/templates/game/: _filters.html  _pagination.html  comment_form.html  comment_list.html  confirm_delete.html  home.html  login.html  map_detail.html  map_list.html  quest_detail.html  quest_form.html  quest_list.html  register.html  trader_form.html  trader_list.html
src/: db.rs  main.rs  seed.rs  simulation.rs
