[package]
name = "ms-sql-lab"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio= {version = "1", features = ["full"]}
sqlx = { version = "0.6.2", features = ["mssql", "runtime-tokio-native-tls", "macros"] }
dotenv = "0.15"
fake = "4.4.0"
rand = "0.9.2"
chrono = { version = "0.4.42", features = ["clock"] }